# sfox_toolkit

./: LICENSE  README.md  pyproject.toml  requirements.txt
db/: create_grid_vol.sql  create_orders_responses_table.sql  create_orders_table.sql
src/sfox_trader/: __init__.py
src/sfox_trader/lib/: __init__.py  chartdata_cache.py  orders_store.py  pair_utils.py  sfox_client.py  sfox_ws.py
tests/: __init__.py  test_fetch_candles.py  test_format.py  test_mm_hft_backtest.py  test_order_submission_latency_stats.py  test_sfox_client.py  test_sfox_mm_helpers.py
tools/get_candles/: README.md  fetch_candles.py
tools/get_mid_ws/: get_mid_ws.py
tools/oba/: IMPROVEMENTS.md  README.md  sfox_mm.colors.cfg.example  sfox_mm.py  sfox_ws_debug.py
tools/osl/: README.md  order_submission_latency_stats.py
tools/trader/: README.md  trader.py
